feature:add navigation

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -9,7 +9,7 @@ $list1: $blue, $green, $orange;
 $sidebar-bg-color: #101820;
 $submenu-bg-color: rgba(255, 255, 255, 0.05);
 $submenu-bg-color-collapsed: rgba(#0c1e35, 0.95);
-$sidebar-color: #f2aa4c;
+$sidebar-color: #ffa44f;
 $highlight-color: #dee2ec;
 $icon-bg-color: rgba(255, 255, 255, 0.05);
 $icon-size: 35px;
