feature: init homepage

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #000d2b; 
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #435685; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #2e4376; 
+} 
