--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -6,8 +6,8 @@ $green: #c1d72e;
 
 $list1: $blue, $green, $orange;
 
-$sidebar-bg-color: #000030;
-$submenu-bg-color: #000030;
+$sidebar-bg-color: #000e2f;
+$submenu-bg-color: #000e2f;
 $submenu-bg-color-collapsed: rgba(#0c1e35, 0.95);
 $sidebar-color: #ffa44f;
 $highlight-color: #dee2ec;
