--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -6,12 +6,12 @@ $green: #c1d72e;
 
 $list1: $blue, $green, $orange;
 
-$sidebar-bg-color: #000e2f;
-$submenu-bg-color: #000e2f;
+$sidebar-bg-color: #090032;
+$submenu-bg-color: #090032;
 $submenu-bg-color-collapsed: rgba(#0c1e35, 0.95);
-$sidebar-color: #ffa44f;
+$sidebar-color: #9cb0e7;
 $highlight-color: #dee2ec;
-$icon-bg-color: #000030;
+$icon-bg-color: #28283d;
 $icon-size: 35px;
 
 @import "~react-pro-sidebar/dist/scss/styles.scss";
