--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,29 @@ code {
 ::-webkit-scrollbar-thumb:hover {
   background: #2e4376;
 }
+.Toastify__toast--error {
+  font-family: "Dana-FaNum", Helvetica, Arial, serif !important;
+}
+
+.Toastify__toast--warning {
+  font-family: "Dana-FaNum", Helvetica, Arial, serif !important;
+}
+.Toastify__toast--success {
+  font-family: "Dana-FaNum", Helvetica, Arial, serif !important;
+}
+
+.Toastify__toast--warning:hover {
+  box-sizing: 0 !important;
+  box-shadow: none !important;
+}
+
+.Toastify__toast--error:hover {
+  box-sizing: 0 !important;
+  box-shadow: none !important;
+  /* color: rgb(245, 199, 100); */
+}
+
+.Toastify__toast--success:hover {
+  box-sizing: 0 !important;
+  box-shadow: none !important;
+}
