--- a/src/components/Filtering/index.css
+++ b/src/components/Filtering/index.css
@@ -5,8 +5,8 @@
   color: #fff !important;
 }
 .MuiAutocomplete-root fieldset {
-  border-color: #181158 !important;
+  border-color: #d0cee3 !important;
 }
 .MuiInputBase-root fieldset {
-  border-color: #181158 !important;
+  border-color: #d0cee3 !important;
 }
