feature:My Auction Page

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -11,7 +11,7 @@ $submenu-bg-color: #090032;
 $submenu-bg-color-collapsed: rgba(#0c1e35, 0.95);
 $sidebar-color: #9cb0e7;
 $highlight-color: #dee2ec;
-$icon-bg-color: #28283d;
+$icon-bg-color: #06011f;
 $icon-size: 35px;
 
 @import "~react-pro-sidebar/dist/scss/styles.scss";
