--- a/src/assets/scss/core/base/_helpers.scss
+++ b/src/assets/scss/core/base/_helpers.scss
@@ -157,8 +157,12 @@ img.has-shadow {
 	text-align: center;
 
 	img,
-	svg,
+	svg{margin-left: auto;
+		margin-right: auto;}
+
 	video {
+		width: 100%;
+		height: 100%;
 		margin-left: auto;
 		margin-right: auto;
 	}
@@ -170,12 +174,15 @@ img.has-shadow {
 
 // Responsive video
 .responsive-video {
+	width: 100%;
+	height: 100%;
 	position: relative;
-	padding-bottom: 56.25%; // 16:9
-	height: 0;
 
 	&.is-4-3 {
 		padding-bottom: 75%; // 4:3
+	}
+	video{
+		width: 100%;
 	}
 
 	iframe {
@@ -520,8 +527,11 @@ img.has-shadow {
 		text-align: center;
 
 		img,
-		svg,
+		svg{margin-left: auto;
+			margin-right: auto;}
 		video {
+			width: 100%;
+			height: 100%;
 			margin-left: auto;
 			margin-right: auto;
 		}
@@ -583,8 +593,11 @@ img.has-shadow {
 		text-align: center;
 
 		img,
-		svg,
+		svg{margin-left: auto;
+			margin-right: auto;}
 		video {
+			width: 100%;
+			height: 100%;
 			margin-left: auto;
 			margin-right: auto;
 		}
