--- a/src/pages/category/index.css
+++ b/src/pages/category/index.css
@@ -1,7 +1,8 @@
 .text{
     text-align: center;
  
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 15px;
     position: relative;
   
     font-size: 30px;
@@ -65,4 +66,43 @@
     align-items: center;
     margin: 0;
     background: #2304d6;
+  }
+
+
+/* * {
+  transition: all 0.3s ease-out;
+} */
+
+.card1 {
+  display: block;
+  position: relative;
+  /* max-height: 220px;
+  max-width: 200 px; */
+  border-radius: 6px;
+  margin: 20px;
+
+  text-decoration: none;
+  z-index: 0;
+  overflow: hidden;
+
+
+
+}
+
+.card1::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: -16px;
+    right: -16px;
+    background: #3939c5;
+    height: 32px;
+    width: 32px;
+    border-radius: 32px;
+    transform: scale(1);
+    transform-origin: 50% 50%;
+    transition: transform 0.25s ease-out;
+  }
+ .card1:hover:before {
+    transform: scale(21);
   }
