fix : card-category / fix auction form and add toast to form and fix categories filter and cards styles.

--- a/src/components/MyAuction/styles.scss
+++ b/src/components/MyAuction/styles.scss
@@ -8,3 +8,18 @@
   --tw-shadow-color: #334155;
   --tw-shadow: var(--tw-shadow-colored);
 }
+
+.labels-div {
+  .MuiFormControlLabel-root {
+    margin: 0;
+  }
+}
+
+.label-question {
+  color: white;
+}
+
+.MuiFormLabel-root {
+  color: rgb(225, 223, 223) !important;
+
+}
