--- a/src/pages/category/index.css
+++ b/src/pages/category/index.css
@@ -84,7 +84,7 @@
   text-decoration: none;
   z-index: 0;
   overflow: hidden;
-
+  padding: 0;
 
 
 }
@@ -105,4 +105,32 @@
   }
  .card1:hover:before {
     transform: scale(21);
+  }
+
+  .cat-image{
+    max-width: 140px;
+  }
+
+  .cat-button{
+    flex-direction: column;
+    padding: 18px 24px !important;
+    display:flex;
+    color: white;
+    row-gap: 24px;
+    justify-content:center;
+    align-items: center;
+    background-color: rgb(63, 52, 162);
+    border-radius: 4px;
+  }
+
+  .cat-name{
+    color: white;
+    font-size: 20px ;
+  }
+
+  .category-div {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 16px;
+    column-gap: 16px;
   }
