--- a/src/pages/category/index.css
+++ b/src/pages/category/index.css
@@ -1,8 +1,7 @@
 .text{
     text-align: center;
- 
     margin-top: 10px;
-    margin-bottom: 300px;
+    margin-bottom: 350px;
     position: relative;
   
     font-size: 30px;
@@ -81,6 +80,7 @@
   /* position: relative; */
   /* max-height: 220px;
   max-width: 200 px; */
+  max-width:700px;
   border-radius: 6px;
   margin: 20px;
 
@@ -105,6 +105,7 @@
     transform: scale(1);
     transform-origin: 50% 50%;
     transition: transform 0.25s ease-out;
+    align-items: center;
   }
  .card1:hover:before {
     transform: scale(21);
@@ -112,6 +113,9 @@
 
   .cat-image{
     max-width: 140px;
+    align-items: center;
+    margin-left: 250px;
+
   }
 
   .cat-button{
@@ -136,6 +140,8 @@
     flex-wrap: wrap;
     row-gap: 16px;
     column-gap: 16px;
+    align-items: center;
+  
   }
 
   .div-style{
